<resources>
    <string name="app_name">ERA</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginUser">Login</string>
    <string name="register">Register</string>
    <string name="forgot_your_login_details">Forgot your password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="logo">Logo</string>
    <string name="reset_password">Reset password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password_instructions">Enter your email below to receive your password reset instructions</string>
    <string name="cannot_be_empty">Cannot be empty</string>
    <string name="pwd_reset_email_sent">Password reset link sent. Please check your email</string>
    <string name="username">Username</string>
    <string name="length_error_8_150">Length must be between 8 and 150.</string>
    <string name="profile">Profile</string>
    <string name="connected_devices">Connected devices</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="cont">Continue</string>
    <string name="enter_verification_code">Enter verification code sent to your device to confirm your phone number</string>
    <string name="confirm">Confirm</string>
    <string name="code">Code</string>
    <string name="invalid_pin">Invalid pin. Please try again</string>
    <string name="resend_pin">Resend pin</string>
    <string name="try_again">Try again</string>
    <string name="terms_of_use_and_privacy_policy">By using Era, you agree to the
        Terms of Use and Privacy Policy</string>
    <string name="phone_number_activity_dual_sim_warning">Warning: This device seems to have dual
        sim card functionality. ERA will only work with the phone number registered above. If at
        any other point the default sim card/phone number is switched in the device settings
        screen, ERA may not function properly.</string>
    <string name="pin_code">Pin Code</string>
    <string name="home">Home</string>
    <string name="personal_information">Personal information</string>
    <string name="contact_information">Contact Information</string>
    <string name="demographics">Demographics</string>
    <string name="full_name">Full name</string>
    <string name="profile_photo">Profile photo</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="languages">Languages</string>
    <string name="occupation">Occupation</string>
    <string name="type">Type</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="home_address">Home address</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="medical_information">Medical information</string>
    <string name="health_data">Health Data</string>
    <string name="allergies">Allergies</string>
    <string name="medical_condition">Medical condition</string>
    <string name="disabilities">Disabilities</string>
    <string name="medications">Medications</string>
    <string name="blood_type">Blood Type</string>
    <string name="medical_notes">Medical notes</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="label">Label</string>
    <string name="City">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip code</string>
    <string name="country_code">Country code</string>
    <string name="all_home_address_fields_required">Please make sure that all Home Address fields are filled out</string>
    <string name="fill_out_all_fields">Please make sure to fill out all fields</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="era_splash_screen_logo">ERA splash screen logo</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="edit_contacts">Edit contacts</string>
    <string name="num_0">0</string>
    <string name="title_activity_emergency_contacts">EmergencyContactsActivity</string>
    <string name="cancel">Cancel</string>
    <string name="enter_valid_phone">Please enter a valid phone number</string>
    <string name="enter_valid_name">Please enter a valid name</string>
    <string name="all_fields_are_required">All fields are required</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="enable_lock_widget">Enable lock screen widget</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_calling_911">Are you sure you want to call 911?</string>
    <string name="widget_image">Widget image</string>
    <string name="error_use_native_dialer">Error: Please try again or use native dialer instead</string>
    <string name="alert_initiated">Alert initiated</string>
    <string name="requires_location_perm_native_dialer">Requires location permission to be granted. Using native dialer.</string>
    <string name="gps_required_native_dialer">GPS must be enabled. Using native dialer.</string>
    <string name="init_please_wait">Initiating, please wait…</string>
    <string name="scan">Scan</string>
    <string name="number_of_emergency_contacts">Number of emergency contacts:</string>
    <string name="bt_unavailable">Bluetooth is unavailable on this device.</string>
    <string name="bt_connection">Bluetooth connection</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_to">Connected to %s</string>
    <string name="confirm_bt_disconnect">Are you sure you want to disconnect?</string>
    <string name="no_devices">No available devices</string>
    <string name="warning_picture">Warning picture</string>
    <string name="expand_collapse_cc">Expand or collapse contacts card</string>
    <string name="type_home_work_etc">Type (Home, Work, etc.)</string>
    <string name="choose_birthday">Choose your birthday</string>
    <string name="cannot_add_similar_emg_contact">Cannot add multiple contacts with the same phone number.</string>
    <string name="add_contacts">Add contacts</string>
    <string name="label_eg_home">Label (eg. Home)</string>
    <string name="home_address_required">Home address (Required)</string>
    <string name="max_contacts_reached">Maximum amount of allowed contacts has been reached</string>
    <string name="enter_valid_pin">Please enter a valid pin</string>
    <string name="splash_main_text">Explore the \nversatility \nof the RapidSOS Emergency API</string>
    <string name="emergency_reference_app">Emergency Reference App</string>
    <string name="hello_there_welcome_back">Hello there,\nWelcome back.</string>
    <string name="log_in">Log in</string>
    <string name="register_account">Register Account</string>
    <string name="login_you_in_please_wait">Login you in. Please wait...</string>
    <string name="sign_up">Sign up</string>
    <string name="join_us">Join us.</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in.</string>
    <string name="registering_you_please_wait">Registering you. Please wait...</string>
    <string name="phone_screen_text">Your phone number is used to identify and locate you in the event of an emergency.</string>
    <string name="tos_title">Terms of use</string>
    <string name="accept">Accept</string>
</resources>
