<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/all_fields_are_required"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmgFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/etEmgFullName"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmgFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="John Doe" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmgPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/etPhoneNumber"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmgPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="15698563255" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmgEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@+id/etEmgEmail"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/etEmgEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="abc@gmail.com" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>