<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AlertDialog.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/what_would_you_like_to_do"
        android:textColor="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvChooseFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="16dp"
            android:drawableTop="@drawable/ic_menu_gallery"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/choose_from_gallery" />

        <TextView
            android:id="@+id/tvTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:drawablePadding="16dp"
            android:drawableTop="@drawable/ic_menu_camera"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/take_a_picture" />

    </LinearLayout>

</LinearLayout>